resources/public/css/style.css
/* vars */
:root {
    color-scheme: light dark;

    /* common */
    --link-primary-color: #129bd8;
    --pulse-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;

    /* dark theme */
    --bg-primary-color: #010c12;
    --bg-secondary-color: #212e42;

    --text-primary-color: #f3c30e;
    --text-secondary-color: #ffffff;

    --button-primary-color: black;

    --error-primary-color: #f09295;

    --border-primary-color: #7c7c7c;

    --active-primary-color: #f3c30e;
}

:root.light {
    /* light theme */
    --bg-primary-color: #e9f6ff;
    --bg-secondary-color: #f5fff4;

    --text-primary-color: #1f167b;
    --text-secondary-color: #08080a;

    --button-primary-color: white;

    --error-primary-color: #991b1b;

    --border-primary-color: #375271c2;

    --active-primary-color: #1f167b;
}

/* Animated background */
/* https://alvarotrigo.com/blog/animated-backgrounds-css/ */


/* General */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.hidden {
    display: none;
}

.show {
    display: block;
}

html {
    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
}

body {
    min-height: 100vh;
    background-image: linear-gradient(to right, var(--bg-secondary-color) 15%, var(--bg-primary-color) 85%);
    color: var(--text-secondary-color);
}

@media(max-width: 1024px) {
    body {
        background-image: linear-gradient(to right, var(--bg-secondary-color), var(--bg-primary-color));
    }
}

header,
section,
footer {
    margin: auto;
}

h1, h2, h3, h4, h5, h6 {
    padding-bottom: 1rem;
    padding-top: 1rem;
}

@media (max-width: 1024px) {
    h1, h2, h3, h4, h5, h6 {
        text-align: center;
    }
}

h1 {
    font-size: 1.8rem;
    color: var(--text-primary-color);
    text-transform: uppercase;
}

h2 {
    font-size: 1.6rem;
    color: var(--text-secondary-color);
    text-transform: uppercase;
}

h3 {
    font-size: 1.5rem;
    color: var(--text-primary-color);
}

h4 {
    font-size: 1.4rem;
    color: var(--text-secondary-color);
}

h5 {
    font-size: 1.3rem;
    color: var(--text-primary-color);
}

h5 {
    font-size: 1.2rem;
    color: var(--text-primary-color);
}

p {
    font-size: 1rem;
    line-height: 1.5em; 
    margin: 1rem 0rem;
}

pre {
    font-size: 1rem;
    margin: 1rem 0rem;
    padding: 1rem;
    background-color: var(--bg-secondary-color);
}

code {
    font-size: 1rem;
    color: var(--text-primary-color);
}

a {
    display: inline-block;
    padding: 0.5rem 0rem;
    color: var(--link-primary-color);
}

ul {
    list-style-type: disc;
    list-style-position: inside;
}

li {
    padding-bottom: 0.5rem;
}

li a {
    padding: 0;
}

section button {
    padding: 0.5rem;
    background-color: var(--bg-primary-color);
    border-radius: 0.25rem;
    border-width: 2px;
    border-color: var(--text-primary-color);
}

img,
svg {
    display: block;
    margin: auto;
}

.container {
    width: 100%;
}

@media (min-width: 640px) {
    .container {
        max-width: 640px;
    }
}

@media (min-width: 768px) {
    .container {
        max-width: 768px;
    }
}

@media (min-width: 1024px) {
    .container {
        max-width: 1024px;
    }
}

@media (min-width: 1280px) {
    .container {
        max-width: 1280px;
    }
}

@media (min-width: 1536px) {
    .container {
        max-width: 1536px;
    }
}

/* Form */

form {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    width: 100%;
    text-align: center;
}

@media (max-width: 1024px) {
    form {
        display: block;
    }
}

form fieldset {
    width: 100%;
    border: none;
    margin: 0.3rem 0;
}

form legend {
    font-size: 1.3rem;
    color: var(--text-primary-color);
}

form input, textarea, select {
    min-width: 30%;
    margin: 1rem 0.5rem;
    color: var(--text-secondary-color);
    background-color: var(--bg-secondary-color);
    padding: 0.3rem;
}

form textarea {
    margin: 1rem 0rem;
    width: 100%;
    min-height: 50rem;
}

input[type=button] {
    padding: 0.5rem;
    color: var(--link-primary-color);
    text-transform: uppercase;
}

/* Animation */

@keyframes pulse {

    0%,
    100% {
        opacity: 1;
    }

    50% {
        opacity: .5;
    }
}

/* Assets */

.user-pic {
    width: 2rem;
}

@media (min-width: 1024px) {
    .user-pic {
        width: 4rem;
    }
}

.header-logo, .post-header-icon{
    width: 32px;
    height: 32px;
}

.post-icon {
    width: 22px;
    height: 22px;
}

.burger {
    fill: var(--text-primary-color);
    width: 32px;
    height: 32px;
}

svg {
    fill: var(--link-primary-color);
    width: 250px;
}

svg:hover {
    fill: var(--text-secondary-color);
}

.done, .plus {
    fill: var(--border-primary-color);
}

.close, .trash {
    fill: var(--error-primary-color);
}

/* Header */

header {
    margin: auto;
    text-align: center;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-color: var(--border-primary-color);
}

header.full-screen {
    height: 100vh;
}

header .top {
    padding: 1.5rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header .hidden {
    display: none;
}

.pointer {
    cursor: pointer;
}

header img:hover,
svg:hover,
a:hover {
    animation: var(--pulse-animation);
}

nav {
    font-size: 1.125rem;
    line-height: 1.75rem;
    color: var(--text-primary-color);
}

nav p {
    margin: 1.5rem;
    display: none;
}

nav a {
    margin: 1.5rem;
    text-decoration: none;
    color: var(--text-secondary-color);
}

nav a:hover {
    color: var(--link-primary-color);
}

.active {
    color: var(--active-primary-color);
}

header .nav-btn {
    display: block;
    background-color: inherit;
    border: none;
    cursor: pointer;
}

header .nav-btn svg {
    width: 4rem;
}

header .name h1 {
    padding: 0;
    text-transform: capitalize;
}
/* ... */

